[package]
name = "leadershipdiscordbot-rs"
version = "0.1.0"
authors = [
    "Rat Girl",
    "Sam Nolan"

]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.1"
tokio = "0.2"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
shell-words = "1.0.0"
uuid = { version = "0.8.1", features = ["v4"] }
